--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
   </div>
 
   <!-- Tidio Bot (החלף בקוד שלך מ-Tidio) -->
-  <script src="//code.tidio.co/YOUR_TIDIO_CODE.js" async></script>
+<script src="//code.tidio.co/rolpltocogtbyynehmukn3oztulv5zjf.js" async></script>
 </body>
 </html>
